feat: add create endpoint
